<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:orientation="vertical">

    <!-- Top Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Google Play Logo -->
        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/playstore"
            android:src="@drawable/playstore" />

        <!-- Push remaining icons to the right -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Notification -->
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/notification"
            android:src="@drawable/notification"
            app:tint="#FFFFFF" />

        <Space
            android:layout_width="18dp"
            android:layout_height="1dp" />

        <!-- Profile -->
        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:contentDescription="@string/account"
            android:src="@drawable/account" />
    </LinearLayout>

    <!-- Categories -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:text="@string/for_you"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:text="@string/top_charts"
            android:textColor="@color/gray"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:text="@string/kids"
            android:textColor="@color/gray"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/gray"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Border -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:background="#2A2A2A" />

    <!-- App Banner Card -->

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <!-- How Many Dudes Banner -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:contentDescription="@string/how_many_dudes_banner"
            android:scaleType="centerCrop"
            android:src="@drawable/how_many_dudes_banner" />
    </androidx.cardview.widget.CardView>

    <!-- How Many Dudes Card -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/how_many_dudes_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/how_many_dudes" />
        </androidx.cardview.widget.CardView>

        <!-- How Many Dudes Card Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/how_many_dudes"
                android:textFontWeight="400"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Butterscotch Shenanigans"
                android:textColor="@color/gray"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- 7+ Icon-->
                <TextView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/age_rating_badge"
                    android:gravity="center"
                    android:text="7+"
                    android:textColor="@color/background"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <!-- Small Space -->
                <Space
                    android:layout_width="4dp"
                    android:layout_height="1dp" />

                <!-- Rated for 7+ -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rated for 7+"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <!-- Space -->
                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <!-- Play Games / Play Pass Icon -->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="Play Pass"
                    android:src="@drawable/play_pass" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="108dp"
                android:layout_height="55dp"
                android:text="₹499.00"

                android:textSize="15dp"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>